# OSTIS_VideogameBase

kb/ui_menu/: ui_menu_na_example_commands.scs
kb/videogame_base/aesthetic/: section_subject_domain_of_aesthetic.scs
kb/videogame_base/aesthetic/concepts/: concept_3d_model.scs  concept_aesthetic.scs  concept_dialogs_sound.scs  concept_music.scs  concept_sound_effects.scs  concept_sound_perception.scs  concept_sprite.scs  concept_tactile_perception.scs  concept_texture.scs  concept_visual_effects.scs  concept_visual_perception.scs
kb/videogame_base/mechanic/: section_subject_domain_of_mechanic.scs
kb/videogame_base/mechanic/concepts/: concept_achievements.scs  concept_armor.scs  concept_enemy.scs  concept_experience.scs  concept_fast_travel.scs  concept_flight.scs  concept_game_character.scs  concept_game_currency.scs  concept_gamer.scs  (+13 more)
kb/videogame_base/story/: section_subject_domain_of_story.scs
kb/videogame_base/technology/: section_subject_domain_of_technology.scs
kb/videogame_base/videogame/: section_subject_domain_of_videogames.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/chanceCalculatorModule/: CMakeLists.txt  chanceCalculatorModule.cpp  chanceCalculatorModule.hpp
problem-solver/cxx/chanceCalculatorModule/agents/: ChanceCalculatorAgent.cpp  ChanceCalculatorAgent.hpp
problem-solver/cxx/chanceCalculatorModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/chanceCalculatorModule/specifications/: lib_component_ui_menu_chance_calculator.scs  ui_menu_chance_calculator.scsi
problem-solver/cxx/damageCalculatorModule/: CMakeLists.txt  damageCalculatorModule.cpp  damageCalculatorModule.hpp
problem-solver/cxx/damageCalculatorModule/agents/: DamageCalculatorAgent.cpp  DamageCalculatorAgent.hpp
problem-solver/cxx/damageCalculatorModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/damageCalculatorModule/specifications/: lib_component_ui_menu_damage_calculator.scs  ui_menu_damage_calculator.scsi
problem-solver/cxx/gameCalculatorModule/: CMakeLists.txt  gameCalculatorModule.cpp  gameCalculatorModule.hpp
problem-solver/cxx/gameCalculatorModule/agents/: GameCalculatorAgent.cpp  GameCalculatorAgent.hpp
problem-solver/cxx/gameCalculatorModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/gameCalculatorModule/specifications/: lib_component_ui_menu_game_calculator.scs  ui_menu_game_calculator.scsi
(+27 files in other folders)
